Much work on parsing.

--- a/style/index.css
+++ b/style/index.css
@@ -142,3 +142,14 @@ div.eval-result-row {
   display: flex;
   justify-content: space-between;
 }
+
+table,
+td {
+    border: 1px solid #333;
+}
+
+thead,
+tfoot {
+    background-color: #333;
+    color: #fff;
+}
