--- a/pages/style/index.css
+++ b/pages/style/index.css
@@ -10,9 +10,28 @@ body, table {
 }
 h1 {
   font-weight: 400;
+  margin: 0;
 }
-h2 {
+h2, h3 {
   font-weight: 200;
+  margin: 0;
+}
+button {
+  border: 2px solid #1e1e5d;
+  background: white;
+  color: #1e1e5d;
+  font-family: system-ui, sans-serif;
+  font-size: 1rem;
+  line-height: 1.2;
+  white-space: nowrap;
+  text-decoration: none;
+  padding: 0.25rem 0.5rem;
+  margin: 0.25rem;
+  cursor: pointer;
+}
+a {
+  text-decoration: none;
+  color: #1e1e5d;
 }
 .error {
   color: #c12828;
@@ -33,9 +52,6 @@ div.lvca-viewer {
     "header2-dynamics        repl-pane"
     "dynamics-pane           repl-pane"
 }
-h1, h2 {
-  margin: 0;
-}
 h1.header {
   margin-left: 20px;
   margin-top: 30px;
@@ -52,9 +68,7 @@ h2.header2-concrete, h2.header2-statics, h2.header2-dynamics, h2.header2-abstrac
 }
 div.concrete-pane, div.abstract-syntax-pane, div.statics-pane, div.dynamics-pane, div.repl-pane {
   grid-area: concrete-pane;
-  border-left: 2px solid #1e1e5d;
-  border-bottom: 2px solid #1e1e5d;
-  border-right: 2px solid #1e1e5d;
+  border: 2px solid #1e1e5d;
   padding: 20px;
 }
 div.term-input {
@@ -128,4 +142,12 @@ tfoot {
 
 .debugger-tokens {
   padding: 8px 0;
+}
+.section-box {
+  border: 2px solid #1e1e5d;
+  padding: 20px;
+}
+button.disabled {
+  color: gray;
+  cursor: not-allowed;
 }
