--- a/pages/style.css
+++ b/pages/style.css
@@ -29,3 +29,8 @@ kbd {
   box-shadow: 0 1px 1px rgba(12,13,14,0.15), inset 0 1px 0 0 #fff;
   overflow-wrap: break-word;
 }
+pre {
+  white-space: pre-wrap;
+  width: 400px;
+  word-wrap: break-word;
+}
