--- a/pages/style.css
+++ b/pages/style.css
@@ -66,3 +66,22 @@ table.language_chart {
 .parser-test-row {
   display: flex;
 }
+
+.string-location {
+  font-family: monospace;
+}
+
+.string-location-before {
+  background-color: #0080002e;
+}
+
+.parser-display {
+  margin: 10px 0;
+  padding: 5px;
+  border-left: 2px solid black;
+}
+
+.parser-stack {
+  display: flex;
+  flex-direction: column;
+}
