--- a/pages/style.css
+++ b/pages/style.css
@@ -70,7 +70,7 @@ table.language_chart {
 .parser-display {
   margin: 10px 0;
   padding: 5px;
-  border-left: 2px solid black;
+  /* border-left: 2px solid black; */
 }
 
 .parser-stack {
@@ -92,4 +92,8 @@ table.language_chart {
 .rows {
   display: flex;
   flex-direction: column;
+}
+
+.border {
+  border: 2px solid black;
 }
